fixed timer, added visible/hidden features for startQuiz function

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ main {
     align-items: center;
 }
 
-.btn {
+button {
     background-color: red;
     color: white;
     border-radius: 15px;
@@ -33,8 +33,15 @@ main {
     text-decoration: none;
 }
 
-.btn:hover {
+button:hover {
     cursor: pointer;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
 }
 
 .choice-container {
@@ -48,6 +55,8 @@ main {
 
 .choice-container:hover {
     cursor: pointer;
+    transform: translateY(-0.1rem);
+    transition: transform 150ms;
 }
 
 .choice-text {
